# Data-Quality-Inspector-Demo

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
dqi/: __init__.py  cli.py  config.py  console.py  fetcher.py  motto.py  reporter.py  summary.py  utils.py
dqi/checks/: __init__.py  duplicates.py  nulls.py  outliers.py  types.py
reports/: quality_report.md
reports/assets/: .gitkeep
tests/: conftest.py  test_cli.py  test_duplicates.py  test_fetcher.py  test_motto.py  test_nulls.py  test_outliers.py  test_reporter.py  test_summary.py
