[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "data-quality-inspector"
version = "0.2.0"
description = "CLI for World Bank data quality audits and Markdown/HTML reports."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.0.0",
  "numpy>=1.24.0",
  "wbgapi>=1.0.12",
  "matplotlib>=3.8.0",
  "rich>=13.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["dqi*"]

[project.scripts]
dqi-audit = "dqi.cli:main"
